Finish documenting all stray notes except one

--- a/perspectives/2022/08_12.md
+++ b/perspectives/2022/08_12.md
@@ -1,3 +1,5 @@
 # Perspective
 ## August 12, 2022
+
+### What am I doing?
 I am orchestrating a technologically and socially engineered dismantling of centralized and hierarchical authority, peaceful & invisible. Peace in our time. No Ultron, no killer robots, no hate. I do it with love and submission because that is the only way.
