Rearrange root folder

--- a/perspectives/2022/08_17.md
+++ b/perspectives/2022/08_17.md
@@ -1,4 +1,7 @@
-# Purgatory
+# Perspective
+## August 17, 2022
+
+## Purgatory
 
 A religious analogy of the feelings evaocative of the 'gaping chasm.'
 
