--- a/perspectives/2022/08_19.md
+++ b/perspectives/2022/08_19.md
@@ -1,4 +1,7 @@
-# Arabian Night
+# Perspective
+## August 19, 2022
+
+## Arabian Night
 
 As I continue to learn more about what it is that I truly want, I think I have finally distilled it into a single question that has as much honesty as I can put into it:
 
