Make my logged ideas open source, move publishing checklist to better spot, fix plurality on perspective docs, add new perspective

--- a/perspectives/2022/02_03.md
+++ b/perspectives/2022/02_03.md
@@ -1,7 +1,7 @@
-# Perspective
+# Perspectives
 ## February 3, 2022
 
-### Hindrance from Overstimulation
+## Hindrance from Overstimulation
 * Junk food
 * Socials/Discord w/o the express purpose of doing business†
 * Non-educational YouTube
@@ -9,7 +9,7 @@
 
 † In an ideal world, social media would be used for entertainment in many cases. However, between running a business and managing schizophrenia, that is a trap that can be too easily fallen into already.
 
-### Low-stimulus Rewarding Activities
+## Low-stimulus Rewarding Activities
 * Lifting weights
 * Listening to pro/personal development podcasts
 * Walk in nature
@@ -22,7 +22,7 @@
 * Exploring/integrating thoughts (Voice memo while walking)
 * Exploring/integrating thoughts (Mindmapping \[analog or digital\]
 
-### Helpful Methods/Hacks for Starting Hard Things
+## Helpful Methods/Hacks for Starting Hard Things
 * If it's paid, focus on the service of others, rather than getting paid
 * Create focused spaces, physically and digitally
 * "Eat the frog" (make the hardest task of the day the first task)
